✏️ Update content for proper deployment

--- a/pages/blog/hello-world.mdx
+++ b/pages/blog/hello-world.mdx
@@ -4,15 +4,13 @@ export default post({
   title: "Hello, World! I Started My Blog In Plain HTML",
   description:
     "I finally started my blog, in plain HTML, no CSS, JS, inline style, whatsoever.",
+  createdAt: new Date("2020-12-17"),
 });
 
 Today is a special day for me: I finally created my blog, what I has been
 thinking of for years 🎉.
 
 ## Plain HTML is fun 🤓
-
-Today is _Dec 17, 2020_ (a day after my ex's birthday) (I don't know why I'm
-mentioning it here).
 
 Because I don't want to give myself another reason to procrastinate again, I
 decided to start this blog dead simple: plain HTML, no inline style, CSS, JS,
