--- a/pages/blog/hello-world.mdx
+++ b/pages/blog/hello-world.mdx
@@ -12,9 +12,9 @@ thinking of for years 🎉.
 
 ## Plain HTML is fun 🤓
 
-Because I don't want to give myself another reason to procrastinate again, I
-decided to start this blog dead simple: plain HTML, no inline style, CSS, JS,
-whatsoever.
+Because I didn't want to give myself another reason to keep procrastinating, I
+decided to start this blog dead simple: plain HTML, no inline style, no CSS, no
+JS, whatsoever.
 
 Surprisingly, after making the decision, I realized that HTML and the web were
 origially created for people to write, share, and communicate information. That
@@ -22,21 +22,21 @@ why we have HTML tags `title`, `article`, `header`, headings ( `h1` `h2` `h3`
 `h4` `h5` `h6`), paragraph (`p`), etc, they're all for writing articles and
 sharing stories. Over time, thanks to more and more powerful computers and
 browsers, HTML/CSS/JS became more and more like a framework to create
-interactive applications.
+interactive applications on the web.
 
-This is so an interesting _Aha!_ movement for me because I came to web
-development from game and desktop programming, which are all about visualization
-and interactivity. All of my experience with web development were also about
-creating beautiful and interactive web applications. I've never happened to
-think of HTML as a means for writing and sharing stories.
+This is such an interesting _Aha!_ movement for me because I started with game
+and desktop programming, which are all about visualization and interactivity.
+All of my previous experience with web development were also about creating
+beautiful and interactive web applications. I've never happened to think of HTML
+as a means for writing and sharing stories.
 
 This also answered one of my biggest unsolved question in programming - why on
 earth there're many different HTML tags that have the same visualization and all
 the weird workaround-like positioning techniques ( `float`, `clear: fix`, etc).
 Coming from game and desktop development, absolute position, flex, and grid were
 always obvious options when it comes to layout and positioning for me. Now, it
-all makes sense 🤯 and it's actually interesting to see how HTML - the core of
-the Internet has evolved over time.
+all makes sense 🤯 and it's very interesting to see how HTML - the core of the
+Internet has evolved over time.
 
 Alright, that is it. I thought that I were gonna write more about why I started
 this blog and what value you can get from it, but I ran out of time, gotta write
