♻️ Change blog definition and format

--- a/pages/blog/20201217-hello-world.mdx
+++ b/pages/blog/20201217-hello-world.mdx
@@ -17,7 +17,7 @@ decided to start this blog dead simple: plain HTML, no inline style, no CSS, no
 JS, whatsoever.
 
 Surprisingly, after making the decision, I realized that HTML and the web were
-origially created for people to write, share, and communicate information. That
+originally created for people to write, share, and communicate information. That
 why we have HTML tags `title`, `article`, `header`, headings ( `h1` `h2` `h3`
 `h4` `h5` `h6`), paragraph (`p`), etc, they're all for writing articles and
 sharing stories. Over time, thanks to more and more powerful computers and
@@ -30,12 +30,12 @@ All of my previous experience with web development were also about creating
 beautiful and interactive web applications. I've never happened to think of HTML
 as a means for writing and sharing stories.
 
-This also answered one of my biggest unsolved question in programming - why on
+This also answered one of my biggest unsolved questions in programming - why on
 earth there're many different HTML tags that have the same visualization and all
 the weird workaround-like positioning techniques ( `float`, `clear: fix`, etc).
 Coming from game and desktop development, absolute position, flex, and grid were
 always obvious options when it comes to layout and positioning for me. Now, it
-all makes sense 🤯 and it's very interesting to see how HTML - the core of the
+all makes sense 🤯 and it's very interesting to see how HTML - the core of The
 Internet has evolved over time.
 
 Alright, that is it. I thought that I were gonna write more about why I started
