Remove date from slug

--- a/pages/blog/hello-world-start-blog-in-html.mdx
+++ b/pages/blog/hello-world-start-blog-in-html.mdx
@@ -4,7 +4,7 @@ export default post({
   title: "Hello, World! I Started My Blog In Plain HTML",
   description:
     "I finally started my blog, in plain HTML, no CSS, JS, inline style, whatsoever.",
-  createdAt: new Date("2020-12-17"),
+  publishedAt: new Date("2020-12-17"),
 });
 
 Today is a special day for me: I finally created my blog, what I has been
