--- a/pages/blog/switch-to-next-js-and-mdx.mdx
+++ b/pages/blog/switch-to-next-js-and-mdx.mdx
@@ -1,17 +1,17 @@
 import post from "~mdx/post";
 
 export default post({
-  title: "Use Next.js and MDX",
+  title: "Switch to Next.js and MDX",
   description:
-    "I'm switching from plain HTML to using Next.js and MDX to have better ease of writing and extensibility.",
-  createdAt: new Date("2020-12-18"),
+    "I switched from plain HTML to using Next.js and MDX to have better ease of writing and extensibility.",
+  publishedAt: new Date("2020-12-18"),
 });
 
 ## The problem
 
 To prevent myself from procrastinating, I [started my blog dead simple in plain
-HTML][b20201217]. Although I had a fun time writing blog posts in HTML and had
-[an interesting Aha! movement][b20201217], writing plain HTML created quite a
+HTML][start blog]. Although I had a fun time writing blog posts in HTML and had
+[an interesting Aha! movement][start blog], writing plain HTML created quite a
 few boilerplates.
 
 ## React and Next.js
@@ -89,6 +89,6 @@ how it's setup and work in practice.
 [react server-side rendering]:
   https://www.digitalocean.com/community/tutorials/react-server-side-rendering
 [mdx]: https://mdxjs.com
-[b20201217]: 20201217-hello-world
+[start blog]: hello-world-start-blog-in-html
 [source code]:
   https://github.com/phuctm97/phuctm97.com/tree/bea56e9213511f72bd6ce0ed587956098c058161
