--- a/pages/blog/switch-to-next-js-and-mdx.mdx
+++ b/pages/blog/switch-to-next-js-and-mdx.mdx
@@ -7,7 +7,7 @@ export default post({
   publishedAt: new Date("2020-12-18"),
 });
 
-## The problem
+## The Problem
 
 To prevent myself from procrastinating, I [started my blog dead simple in plain
 HTML][start blog]. Although I had a fun time writing blog posts in HTML and had
@@ -52,7 +52,7 @@ simpler, shorter, and more natural.
 E.g. following Markdown and HTML produce the same result:
 
 ```md
-## The problem
+## The Problem
 
 To prevent myself from procrastinating, I [started my blog dead simple in plain
 HTML][blog]. Although I had a fun time writing blog posts in `HTML` and had an
@@ -63,7 +63,7 @@ boilerplates.
 ```
 
 ```html
-<h2>The problem</h2>
+<h2>The Problem</h2>
 <p>
   To prevent myself from procrastinating, I
   <a href="https://link.to/a/blog">started my blog dead simple in plain HTML</a
