🗑 Remove unnessary mdx components

--- a/pages/blog/hello-world-start-blog-in-html.mdx
+++ b/pages/blog/hello-world-start-blog-in-html.mdx
@@ -1,6 +1,6 @@
-import post from "~mdx/post";
+import BlogPost from "~components/mdx/BlogPost";
 
-export default post({
+export default BlogPost({
   title: "Hello, World! I Started My Blog In Plain HTML",
   description:
     "I finally started my blog, in plain HTML, no CSS, JS, inline style, whatsoever.",
