--- a/pages/blog/hello-world-start-blog-in-html.mdx
+++ b/pages/blog/hello-world-start-blog-in-html.mdx
@@ -1,6 +1,7 @@
 import BlogPost from "~components/mdx/BlogPost";
 
 export default BlogPost({
+  path: "blog/hello-world-start-blog-in-html",
   title: "Hello, World! I Started My Blog In Plain HTML",
   description:
     "I finally started my blog, in plain HTML, no CSS, JS, inline style, whatsoever.",
