--- a/pages/blog/switch-to-next-js-and-mdx.mdx
+++ b/pages/blog/switch-to-next-js-and-mdx.mdx
@@ -1,6 +1,7 @@
 import BlogPost from "~components/mdx/BlogPost";
 
 export default BlogPost({
+  path: "blog/switch-to-next-js-and-mdx",
   title: "Switch to Next.js and MDX",
   description:
     "I switched from plain HTML to using Next.js and MDX to have better ease of writing and extensibility.",
