Refactor publishedAt to published-time

--- a/pages/blog/hello-world-start-blog-in-html.mdx
+++ b/pages/blog/hello-world-start-blog-in-html.mdx
@@ -3,7 +3,7 @@ title: Hello, World! I Started My Blog In Plain HTML
 description: >-
   I finally started my blog, in plain HTML, no CSS, JS, inline style,
   whatsoever.
-publishedAt: 2020-12-17
+published-time: 2020-12-17
 ---
 
 Today is a special day for me: I finally created my blog, what I has been
