🤯 Auto extract MDX metadata from frontmatter (#11)

--- a/pages/blog/hello-world-start-blog-in-html.mdx
+++ b/pages/blog/hello-world-start-blog-in-html.mdx
@@ -1,12 +1,10 @@
-import BlogPost from "~components/mdx/BlogPost";
-
-export default BlogPost({
-  path: "blog/hello-world-start-blog-in-html",
-  title: "Hello, World! I Started My Blog In Plain HTML",
-  description:
-    "I finally started my blog, in plain HTML, no CSS, JS, inline style, whatsoever.",
-  publishedAt: new Date("2020-12-17"),
-});
+---
+title: Hello, World! I Started My Blog In Plain HTML
+description: >-
+  I finally started my blog, in plain HTML, no CSS, JS, inline style,
+  whatsoever.
+published time: 2020-12-17
+---
 
 Today is a special day for me: I finally created my blog, what I has been
 thinking of for years 🎉.
