--- a/pages/blog/switch-to-next-js-and-mdx.mdx
+++ b/pages/blog/switch-to-next-js-and-mdx.mdx
@@ -1,12 +1,10 @@
-import BlogPost from "~components/mdx/BlogPost";
-
-export default BlogPost({
-  path: "blog/switch-to-next-js-and-mdx",
-  title: "Switch to Next.js and MDX",
-  description:
-    "I switched from plain HTML to using Next.js and MDX to have better ease of writing and extensibility.",
-  publishedAt: new Date("2020-12-18"),
-});
+---
+title: Switch to Next.js and MDX
+description: >-
+  I switched from plain HTML to using Next.js and MDX to have better ease of
+  writing and extensibility.
+published time: 2020-12-18
+---
 
 ## The Problem
 
@@ -90,6 +88,6 @@ how it's setup and work in practice.
 [react server-side rendering]:
   https://www.digitalocean.com/community/tutorials/react-server-side-rendering
 [mdx]: https://mdxjs.com
-[start blog]: hello-world-start-blog-in-html
+[start blog]: /blog/hello-world-start-blog-in-html
 [source code]:
   https://github.com/phuctm97/phuctm97.com/tree/bea56e9213511f72bd6ce0ed587956098c058161
