--- a/pages/blog/being-ambitious-is-a-myth.mdx
+++ b/pages/blog/being-ambitious-is-a-myth.mdx
@@ -1,11 +1,13 @@
 ---
 title: Being Ambitious Is A Myth
-description: "..."
+description: >-
+  There is nothing bad about aspiring to be successful, the bad thing is the
+  definition of it.
 published time: 2020-12-23
 ---
 
 For the whole past of my life, I had always thought that being successful and
-being cool is what "being ambitious" mean to be. I had always wanted to be
+being cool is what "being ambitious" means to be. I always wanted to be
 respected by friends, college friends, highschool friends, relatives, and
 everyone, as many people as possible - I thought that is ambition. Now, I see
 that is **bullshit**. I'm saying this to myself and I hope you aren't in the
