--- a/pages/blog/hello-world-start-blog-in-html.mdx
+++ b/pages/blog/hello-world-start-blog-in-html.mdx
@@ -7,7 +7,8 @@ published time: 2020-12-17
 ---
 
 Today is a special day for me: I finally created my blog, what I has been
-thinking of for years 🎉.
+thinking of for years 🎉. If you are reading this on another platform, it is an
+automatic crosspost, feel free to [check out my website].
 
 ## Plain HTML is fun 🤓
 
@@ -40,3 +41,7 @@ Internet has evolved over time.
 Alright, that is it. I thought that I were gonna write more about why I started
 this blog and what value you can get from it, but I ran out of time, gotta write
 it tomorrow then.
+
+<!-- Links -->
+
+[check out my website]: https://phuctm97.com
