Support tags on my website

--- a/pages/blog/hello-world-start-blog-in-html.mdx
+++ b/pages/blog/hello-world-start-blog-in-html.mdx
@@ -3,6 +3,7 @@ title: Hello, World! I Started My Blog In Plain HTML
 description: >-
   I finally started my blog, in plain HTML, no CSS, JS, inline style,
   whatsoever.
+tags: [html, blog, beginners, webdev]
 published time: 2020-12-17
 ---
 
