Update other articles' tags

--- a/pages/blog/being-ambitious-is-a-myth.mdx
+++ b/pages/blog/being-ambitious-is-a-myth.mdx
@@ -3,6 +3,7 @@ title: Being Ambitious Is A Myth
 description: >-
   There is nothing bad about aspiring to be successful, the bad thing is the
   definition of it.
+tags: [career, blog, startup, motivation]
 published time: 2020-12-23
 ---
 
