--- a/pages/blog/my-custom-md-language.mdx
+++ b/pages/blog/my-custom-md-language.mdx
@@ -3,6 +3,7 @@ title: Create an MDX Plugin To Have My Own Markdown Language
 description: >-
   I created my own Markdown syntax to minimize duplications while maximizing
   writing speed, flexibility, and readiness.
+tags: [react, webdev, automation, blog]
 published time: 2020-12-19
 ---
 
