--- a/pages/blog/switch-to-next-js-and-mdx.mdx
+++ b/pages/blog/switch-to-next-js-and-mdx.mdx
@@ -3,6 +3,7 @@ title: Switch to Next.js and MDX
 description: >-
   I switched from plain HTML to using Next.js and MDX to have better ease of
   writing and extensibility.
+tags: [react, blog, nextjs, mdx]
 published time: 2020-12-18
 ---
 
