--- a/pages/blog/auto-distribute-posts-to-dev-to.mdx
+++ b/pages/blog/auto-distribute-posts-to-dev-to.mdx
@@ -3,6 +3,7 @@ title: Automate Distributing My Posts to DEV.to
 description: >-
   To maximize distributions of my future posts with zero effort, I'm writing a
   bot to distribute all my posts to DEV.to using their API.
+tags: [blog, devops, automation, github]
 published time: 2020-12-20
 ---
 
