--- a/pages/blog/i-change-my-mind-abt-tailwind-css.mdx
+++ b/pages/blog/i-change-my-mind-abt-tailwind-css.mdx
@@ -7,8 +7,8 @@ tags: [css, react, javascript, webdev]
 published time: 2020-12-28
 ---
 
-> TL;DR: If you are skeptical about TailwindCSS, try it for 2 hours, you'll love
-> it.
+> TL;DR: Tailwind won't help you write CSS faster or easier, it helps you think
+> less.
 
 Because I wanted to give [my plain HTML website] a little style, I gave Tailwind
 CSS a shot yesterday. I spent about an hour to read through its documentation
