--- a/pages/blog/auto-distribute-posts-to-dev-to.mdx
+++ b/pages/blog/auto-distribute-posts-to-dev-to.mdx
@@ -4,6 +4,8 @@ description: >-
   To maximize distributions of my future posts with zero effort, I'm writing a
   bot to distribute all my posts to DEV.to using their API.
 tags: [blog, devops, automation, github]
+cover:
+  icons: [dev.to, Github Actions]
 published time: 2020-12-20
 ---
 
