--- a/pages/blog/hello-world-start-blog-in-html.mdx
+++ b/pages/blog/hello-world-start-blog-in-html.mdx
@@ -4,6 +4,8 @@ description: >-
   I finally started my blog, in plain HTML, no CSS, JS, inline style,
   whatsoever.
 tags: [html, blog, beginners, webdev]
+cover:
+  icons: [HTML5]
 published time: 2020-12-17
 ---
 
