--- a/pages/blog/i-change-my-mind-abt-tailwind-css.mdx
+++ b/pages/blog/i-change-my-mind-abt-tailwind-css.mdx
@@ -4,6 +4,8 @@ description:
   I tried TailwindCSS to add styles to my website but quit about an hour, then I
   tried again, it is awesome!
 tags: [css, react, javascript, webdev]
+cover:
+  icons: [Tailwind CSS]
 published time: 2020-12-28
 ---
 
