--- a/pages/blog/introducing-hashnode-sdk-js.mdx
+++ b/pages/blog/introducing-hashnode-sdk-js.mdx
@@ -4,6 +4,8 @@ description: >-
   I created a TypeScript/JavaScript library for working with Hashnode blogging
   platform programmatically.
 tags: [javascript, typescript, sdk, hashnode]
+cover:
+  icons: [TypeScript, JavaScript, Hashnode]
 published time: 2020-12-26
 ---
 
