--- a/pages/blog/parse-frontmatter-mdx-remark-unified.mdx
+++ b/pages/blog/parse-frontmatter-mdx-remark-unified.mdx
@@ -4,6 +4,8 @@ description: >-
   Leverage Unified/Remark plugin ecosystem to easily parse frontmatter in your
   Markdown or MDX documents.
 tags: [markdown, javascript, react, plugin]
+cover:
+  icons: [Markdown, JavaScript]
 published time: 2020-12-25
 ---
 
