--- a/pages/blog/publish-first-npm-package.mdx
+++ b/pages/blog/publish-first-npm-package.mdx
@@ -3,6 +3,8 @@ title: Publish My First NPM TypeScript Package
 description: >-
   I published my first NPM package (TypeScript), here is how I did it.
 tags: [javascript, npm, opensource, typescript]
+cover:
+  icons: [NPM, TypeScript]
 published time: 2020-12-24
 ---
 
