--- a/pages/blog/switch-to-next-js-and-mdx.mdx
+++ b/pages/blog/switch-to-next-js-and-mdx.mdx
@@ -4,6 +4,8 @@ description: >-
   I switched from plain HTML to using Next.js and MDX to have better ease of
   writing and extensibility.
 tags: [react, blog, nextjs, mdx]
+cover:
+  icons: [Next.js, Markdown]
 published time: 2020-12-18
 ---
 
