✨ Allow to customize cover title

--- a/pages/blog/imagegen-as-a-service-introduction.mdx
+++ b/pages/blog/imagegen-as-a-service-introduction.mdx
@@ -5,6 +5,8 @@ description: >-
   personalized/trademark covers for content distribution
 tags: [showdev, dohackathon, saas, javascript]
 cover:
+  title:
+    "**Imagegen** as a Service (**Free**), All **Bloggers** Should Have One"
   icons: [Node.js, Next.js, DigitalOcean]
 published time: 2020-12-30
 ---
