Fix unknown language

--- a/pages/blog/publish-first-npm-package.mdx
+++ b/pages/blog/publish-first-npm-package.mdx
@@ -156,7 +156,7 @@ export = plugin;
 Now I got the code, I need to build it into JavaScript as well as a type
 declaration file. I update my `package.json` to include these:
 
-```jsonc
+```json
 {
   // Other attributes.
   "main": "dist/index.js", // for module import/require
@@ -220,7 +220,7 @@ Done ✨! I got my first NPM package ever published.
 
 - Update `package.json` to update `description` and `keywords` displayed on NPM.
 
-  ```jsonc
+  ```json
   {
     // Other attributes.
     "description": "📋 Unwraps text nodes in Markdown, is useful when publishing to platforms like DEV.to, Medium, Hashnode, etc.",
