--- a/pages/blog/a-quick-exploration-with-deno.mdx
+++ b/pages/blog/a-quick-exploration-with-deno.mdx
@@ -1,3 +1,11 @@
+---
+description:
+  Deno v1 was released a couple of months ago with a lot of different opinions.
+  Today, I decided to take a quick look into what it offers and what that
+  potentially means.
+tags: [deno, typescript, javascript, webdev]
+---
+
 # A Quick Exploration Into Deno
 
 Deno v1 was released a couple of months ago and there were a lot of different
