Update blog formats

--- a/pages/blog/a-quick-exploration-with-deno.mdx
+++ b/pages/blog/a-quick-exploration-with-deno.mdx
@@ -1,5 +1,4 @@
 ---
-title: A Quick Exploration Into Deno
 description:
   Deno v1 was released a couple of months ago with a lot of different opinions.
   Today, I decided to take a quick look into what it offers and what that
@@ -8,8 +7,10 @@ tags: [deno, typescript, javascript, webdev]
 cover:
   title: A Quick Exploration Into **Deno**
   icons: [deno, Node.js]
-published time: 2020-12-31
+date: 2020-12-31
 ---
+
+# A Quick Exploration Into Deno
 
 Deno v1 was released a couple of months ago and there were a lot of different
 opinions about it. Personally, I had a chance to quickly look at its
