--- a/pages/blog/auto-distribute-posts-to-dev-to.mdx
+++ b/pages/blog/auto-distribute-posts-to-dev-to.mdx
@@ -1,13 +1,14 @@
 ---
-title: Automate Distributing My Posts to DEV.to
 description: >-
   To maximize distributions of my future posts with zero effort, I'm writing a
   bot to distribute all my posts to DEV.to using their API.
 tags: [blog, devops, automation, github]
 cover:
   icons: [dev.to, Github Actions]
-published time: 2020-12-20
+date: 2020-12-20
 ---
+
+# Automate Distributing My Posts to DEV.to
 
 To maximize distributions of my blog posts with zero effort, I'm writing a bot
 to distribute all my posts to [DEV.to] using [their API][dev.to api].
