--- a/pages/blog/auto-shrink-header-on-scroll.mdx
+++ b/pages/blog/auto-shrink-header-on-scroll.mdx
@@ -1,11 +1,12 @@
 ---
-title: Auto Shrink Header On Scroll in React
 description:
   I've just implemented a feature to keep my header sticky and auto-shrink when
-  users scroll to maximize readibility and call to action.
+  users scroll to maximize readability and call to action.
 tags: [react, javascript, webdev, beginners]
-published time: 2021-01-04
+date: 2021-01-04
 ---
+
+# Auto Shrink Header On Scroll in React
 
 I've always liked this effect: keep the header of your website sticky then
 auto-shrink and blur when users scroll down.
