--- a/pages/blog/being-ambitious-is-a-myth.mdx
+++ b/pages/blog/being-ambitious-is-a-myth.mdx
@@ -1,11 +1,12 @@
 ---
-title: Being Ambitious Is A Myth
 description: >-
   There is nothing bad about aspiring to be successful, the bad thing is the
   definition of it.
 tags: [career, blog, startup, motivation]
-published time: 2020-12-23
+date: 2020-12-23
 ---
+
+# Being Ambitious Is A Myth
 
 For the whole past of my life, I had always thought that being successful and
 being cool is what "being ambitious" means to be. I always wanted to be
