--- a/pages/blog/hello-world-start-blog-in-html.mdx
+++ b/pages/blog/hello-world-start-blog-in-html.mdx
@@ -1,13 +1,14 @@
 ---
-title: Hello, World! I Started My Blog In Plain HTML
 description: >-
   I finally started my blog, in plain HTML, no CSS, JS, inline style,
   whatsoever.
 tags: [html, blog, beginners, webdev]
 cover:
   icons: [HTML5]
-published time: 2020-12-17
+date: 2020-12-17
 ---
+
+# Hello, World! I Started My Blog In Plain HTML
 
 Today is a special day for me: I finally created my blog, what I has been
 thinking of for years 🎉. If you are reading this on another platform, it is an
