--- a/pages/blog/i-change-my-mind-abt-tailwind-css.mdx
+++ b/pages/blog/i-change-my-mind-abt-tailwind-css.mdx
@@ -1,13 +1,14 @@
 ---
-title: I Changed My Mind After 2nd Try Tailwind CSS
 description:
   I tried TailwindCSS to add styles to my website but quit about an hour, then I
   tried again, it is awesome!
 tags: [css, react, javascript, webdev]
 cover:
   icons: [Tailwind CSS]
-published time: 2020-12-28
+date: 2020-12-28
 ---
+
+# I Changed My Mind After 2nd Try Tailwind CSS
 
 > TL;DR: Tailwind won't help you write CSS faster or easier, it helps you think
 > less.
