--- a/pages/blog/introducing-hashnode-sdk-js.mdx
+++ b/pages/blog/introducing-hashnode-sdk-js.mdx
@@ -1,13 +1,14 @@
 ---
-title: Introducing Hashnode SDK for TypeScript/JavaScript
 description: >-
   I created a TypeScript/JavaScript library for working with Hashnode blogging
   platform programmatically.
 tags: [javascript, typescript, sdk, hashnode]
 cover:
   icons: [TypeScript, JavaScript, Hashnode]
-published time: 2020-12-26
+date: 2020-12-26
 ---
+
+# Introducing Hashnode SDK for TypeScript/JavaScript
 
 In order to implement an [auto-crosspost workflow] for [my website], I created a
 TypeScript/JavaScript SDK for working with [Hashnode] blogging platform. It's
