--- a/pages/blog/my-custom-md-language.mdx
+++ b/pages/blog/my-custom-md-language.mdx
@@ -1,13 +1,14 @@
 ---
-title: Create an MDX Plugin To Have My Own Markdown Language
 description: >-
   I created my own Markdown syntax to minimize duplications while maximizing
   writing speed, flexibility, and readiness.
 tags: [react, webdev, automation, blog]
 cover:
   icons: [Markdown, React]
-published time: 2020-12-19
+date: 2020-12-19
 ---
+
+# Create an MDX Plugin To Have My Own Markdown Language
 
 Yesterday, I [migrated my website from plain HTML to Next.js +
 MDX][html to next mdx], to solve the problem of duplications and boilerplates
