--- a/pages/blog/parse-frontmatter-mdx-remark-unified.mdx
+++ b/pages/blog/parse-frontmatter-mdx-remark-unified.mdx
@@ -1,13 +1,14 @@
 ---
-title: Parse Markdown Frontmatter In MDX, Remark, and Unified
 description: >-
   Leverage Unified/Remark plugin ecosystem to easily parse frontmatter in your
   Markdown or MDX documents.
 tags: [markdown, javascript, react, plugin]
 cover:
   icons: [Markdown, JavaScript]
-published time: 2020-12-25
+date: 2020-12-25
 ---
+
+# Parse Markdown Frontmatter In MDX, Remark, and Unified
 
 Today I created a small Unified/Remark plugin called [remark-parse-frontmatter]
 to help easily parse frontmatter in a Markdown or MDX document using either
