--- a/pages/blog/publish-first-npm-package.mdx
+++ b/pages/blog/publish-first-npm-package.mdx
@@ -1,12 +1,13 @@
 ---
-title: Publish My First NPM TypeScript Package
 description: >-
   I published my first NPM package (TypeScript), here is how I did it.
 tags: [javascript, npm, opensource, typescript]
 cover:
   icons: [NPM, TypeScript]
-published time: 2020-12-24
+date: 2020-12-24
 ---
+
+# Publish My First NPM TypeScript Package
 
 While I'm building [my website/blog][my website], there are a few things that I
 see can be useful to separate and publish as 3rd packages - the biggest
