--- a/pages/blog/switch-to-next-js-and-mdx.mdx
+++ b/pages/blog/switch-to-next-js-and-mdx.mdx
@@ -1,13 +1,14 @@
 ---
-title: Switch to Next.js and MDX
 description: >-
   I switched from plain HTML to using Next.js and MDX to have better ease of
   writing and extensibility.
 tags: [react, blog, nextjs, mdx]
 cover:
   icons: [Next.js, Markdown]
-published time: 2020-12-18
+date: 2020-12-18
 ---
+
+# Switch to Next.js and MDX
 
 ## The Problem
 
