--- a/pages/blog/misundertand-tailwind-typography-cost-me-2h.mdx
+++ b/pages/blog/misundertand-tailwind-typography-cost-me-2h.mdx
@@ -1,5 +1,4 @@
 ---
-title: Misunderstanding @tailwindcss/typography costs me 2 hours
 description: >-
   I spent about 2 hours to style my static pages because Tailwind resets
   everything, but then realized that @tailwindcss/typography did exactly the
@@ -8,8 +7,10 @@ tags: [tailwindcss, css, webdev, beginners]
 cover:
   title: Misunderstanding `@tailwindcss/typography` costs me 2 hours
   icons: [Tailwind CSS]
-published time: 2021-01-02
+date: 2021-01-02
 ---
+
+# Misunderstanding @tailwindcss/typography costs me 2 hours
 
 After [falling in love with Tailwind CSS][blog about tailwind], I incorporated
 it into [my website]. However, there's one thing that is both nice and annoying
