Add missing images

--- a/pages/blog/auto-shrink-header-on-scroll.mdx
+++ b/pages/blog/auto-shrink-header-on-scroll.mdx
@@ -112,4 +112,4 @@ more details.
 [my twitter]: https://twitter.com/phuctm97
 [header src]:
   https://github.com/phuctm97/phuctm97.com/blob/f10f3a558ae34528c8b9363a79e69a31c2e2b41c/layouts/header.tsx
-[demo]: /images/b/auto-shrink.gif
+[demo]: /static/blog/auto-shrink-header-on-scroll/demo.gif
