--- a/pages/blog/auto-shrink-header-on-scroll.mdx
+++ b/pages/blog/auto-shrink-header-on-scroll.mdx
@@ -106,10 +106,13 @@ helps avoid flashing of changed styles.
 That's it. I hope it helps. [Check out the full source code][header src] to see
 more details.
 
+<!-- Images -->
+
+[demo]: /static/blog/auto-shrink-header-on-scroll/demo.gif
+
 <!-- Links -->
 
 [my website]: /
 [my twitter]: https://twitter.com/phuctm97
 [header src]:
   https://github.com/phuctm97/phuctm97.com/blob/f10f3a558ae34528c8b9363a79e69a31c2e2b41c/layouts/header.tsx
-[demo]: /static/blog/auto-shrink-header-on-scroll/demo.gif
