--- a/pages/blog/auto-shrink-header-on-scroll.mdx
+++ b/pages/blog/auto-shrink-header-on-scroll.mdx
@@ -1,11 +1,12 @@
 ---
-title: Auto Shrink Header On Scroll in React
 description:
   I've just implemented a feature to keep my header sticky and auto-shrink when
-  users scroll to maximize readibility and call to action.
+  users scroll to maximize readability and call to action.
 tags: [react, javascript, webdev, beginners]
-published time: 2021-01-04
+date: 2021-01-04
 ---
+
+# Auto Shrink Header On Scroll in React
 
 I've always liked this effect: keep the header of your website sticky then
 auto-shrink and blur when users scroll down.
@@ -105,10 +106,13 @@ helps avoid flashing of changed styles.
 That's it. I hope it helps. [Check out the full source code][header src] to see
 more details.
 
+<!-- Images -->
+
+[demo]: /static/blog/auto-shrink-header-on-scroll/demo.gif
+
 <!-- Links -->
 
 [my website]: /
 [my twitter]: https://twitter.com/phuctm97
 [header src]:
   https://github.com/phuctm97/phuctm97.com/blob/f10f3a558ae34528c8b9363a79e69a31c2e2b41c/layouts/header.tsx
-[demo]: /images/b/auto-shrink.gif
