🎨 Allow title be have custom styles

--- a/pages/blog/a-quick-exploration-with-deno.mdx
+++ b/pages/blog/a-quick-exploration-with-deno.mdx
@@ -5,12 +5,11 @@ description:
   potentially means.
 tags: [deno, typescript, javascript, webdev]
 cover:
-  title: A Quick Exploration Into **Deno**
-  icons: [deno, Node.js]
+  icons: [Deno, Node.js]
 date: 2020-12-31
 ---
 
-# A Quick Exploration Into Deno
+# A Quick Exploration Into **Deno**
 
 Deno v1 was released a couple of months ago and there were a lot of different
 opinions about it. Personally, I had a chance to quickly look at its
