--- a/pages/blog/imagegen-as-a-service-introduction.mdx
+++ b/pages/blog/imagegen-as-a-service-introduction.mdx
@@ -4,13 +4,11 @@ description: >-
   personalized/trademark covers for content distribution
 tags: [showdev, dohackathon, saas, javascript]
 cover:
-  title:
-    "**Imagegen** as a Service (**Free**), All **Bloggers** Should Have One"
   icons: [Node.js, Next.js, DigitalOcean]
 date: 2020-12-30
 ---
 
-# Imagegen as a Service (Free), All Bloggers Should Have One
+# **Imagegen** as a Service (**Free**), All **Bloggers** Should Have One
 
 Hi folks, I've just built an _Imagegen (Image Generator) as a Service_. I
 originally built it as a feature of [my website], then DigitalOcean hackathon
