--- a/pages/blog/misundertand-tailwind-typography-cost-me-2h.mdx
+++ b/pages/blog/misundertand-tailwind-typography-cost-me-2h.mdx
@@ -5,12 +5,11 @@ description: >-
   job.
 tags: [tailwindcss, css, webdev, beginners]
 cover:
-  title: Misunderstanding `@tailwindcss/typography` costs me 2 hours
   icons: [Tailwind CSS]
 date: 2021-01-02
 ---
 
-# Misunderstanding @tailwindcss/typography costs me 2 hours
+# Misunderstanding `@tailwindcss/typography` costs me 2 hours
 
 After [falling in love with Tailwind CSS][blog about tailwind], I incorporated
 it into [my website]. However, there's one thing that is both nice and annoying
