✏️ Fix typos, update cover

--- a/pages/blog/simple-script-cut-half-my-react-app-size.mdx
+++ b/pages/blog/simple-script-cut-half-my-react-app-size.mdx
@@ -3,6 +3,8 @@ description: >-
   A very simple but mindblowing script that I did a couple of days ago in my
   Next.js website that cut its bundle size from 90kb to 50kb.
 tags: [react, javascript, webdev, nextjs]
+cover:
+  icons: [React, Next.js]
 date: 2021-01-12
 ---
 
@@ -31,7 +33,7 @@ So here is how.
 It's all possible thanks to [Preact]. Preact is a 3kb alternative implementation
 of React that provides 100% compatible APIs to React, what it means is that
 Preact and React are interchangeable but Preact is
-[4kb](https://bundlephobia.com/result?p=preact@10.5.9) whereas the React is
+[4kb](https://bundlephobia.com/result?p=preact@10.5.9) whereas React is
 [40kb](https://bundlephobia.com/result?p=react-dom@17.0.1). You may be skeptical
 about whether it's stable, see this
 [list of companies](https://preactjs.com/about/we-are-using), you'll be
